# TA

./: LICENSE  README.md
.devcontainer/: devcontainer.json
ta/: pyproject.toml  requirements.txt
ta/db/: chroma.sqlite3
ta/src/ta/: crew.py  streamlit_app.py
ta/src/ta/config/: agents.yaml  tasks.yaml
ta/src/ta/db/: chroma.sqlite3
